--- a/applications/cmars/preparation.ipynb
+++ b/applications/cmars/preparation.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
     "copy_two_argmax_candidate = 13\n",
     "\n",
     "base_lower = 0.4\n",
-    "base_upper = 0.5\n",
+    "base_upper = 0.8\n",
     "epsilon = 0.001\n",
     "\n",
     "DECLARATION_LINE_BASE = \"(declare-const {} Real)\"\n",
     "INPUT_CONSTRAINT_LINE_BASE = \"(assert ({} {} {}))\"\n",
     "OUTPUT_CONSTRAINT_LINE_BASE = \"(assert (<= {} {}))\"\n",
     "\n",
-    "base_path = \"/home/mzi/sys-rl-verif/applications/cmars/vnnlib/plain_comparative/partial_range/in{}_lower{}_upper{}_eps{}_out{}_{}_{}.vnnlib\"\n",
+    "base_path = \"/home/mzi/sys-rl-verif/applications/cmars/vnnlib/plain_comparative/test/in{}_lower{}_upper{}_eps{}_out{}_{}_{}.vnnlib\"\n",
     "\n",
     "def gen_prop(copy_one_argmax_candidate=copy_one_argmax_candidate, copy_two_argmax_candidate=copy_two_argmax_candidate, \n",
     "            base_lower=base_lower, base_upper=base_upper, base_path=base_path):\n",
@@ -83,14 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = \"/home/mzi/sys-rl-verif/applications/cmars/vnnlib/plain_comparative/partial_range/in{}_lower{}_upper{}_eps{}_out{}_{}_{}.vnnlib\"\n",
-    "\n",
-    "for i in [10 , 11, 12, 13, 14]:\n",
-    "    gen_prop(copy_one_argmax_candidate=0, copy_two_argmax_candidate=i)\n"
+    "for i in [1, 2, 3, 4, 5, 6, 7, 8, 10 , 11, 12, 13, 14]:\n",
+    "    gen_prop(copy_one_argmax_candidate=i, copy_two_argmax_candidate=i)\n"
    ]
   },
   {
