--- a/applications/pensieve/preparation.ipynb
+++ b/applications/pensieve/preparation.ipynb
@@ -16,7 +16,13 @@
    "outputs": [],
    "source": [
     "# input_range_dict = [(0.5, 1.5), (5.95, 6.1), (1.14, 1.15), (0.2, 0.22), (0.15, 0.25), (0.14, 0.3)]\n",
-    "input_range_dict = [(0.5, 1.5), (1, 6), (0.5, 1.15), (0.1, 0.8), (0.15, 0.25), (0.14, 0.6)]"
+    "# (0.5, 1.5), (1, 6), (0.5, 1.15), (0.1, 0.8), (0.15, 0.25), (0.14, 0.6)\n",
+    "\n",
+    "input_range_dict = {\n",
+    "    1: [(0.8, 1.1), (2, 4), (0.7, 0.8), (0.5, 0.6), (0.12, 0.16), (0.3, 0.45)],\n",
+    "    2: [(0.6, 1.3), (3, 5), (0.6, 1.05), (0.3, 0.7), (0.13, 0.2), (0.22, 0.5)],\n",
+    "    3: [(0.5, 1.5), (1, 6), (0.5, 1.15), (0.1, 0.8), (0.15, 0.25), (0.14, 0.6)],\n",
+    "}"
    ]
   },
   {
@@ -35,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,14 +51,18 @@
     "copy_one_argmax_candidate = 0\n",
     "copy_two_argmax_candidate = 5\n",
     "\n",
-    "input_range_dict = [(0.5, 1.5), (1, 6), (0.5, 1.15), (0.1, 0.8), (0.15, 0.25), (0.14, 0.6)]\n",
     "epsilon = 0.001\n",
+    "input_range_dict = {\n",
+    "    1: [(0.8, 1.1), (2, 4), (0.7, 0.8), (0.5, 0.6), (0.12, 0.16), (0.3, 0.45)],\n",
+    "    2: [(0.6, 1.3), (3, 5), (0.6, 1.05), (0.3, 0.7), (0.13, 0.2), (0.22, 0.5)],\n",
+    "    3: [(0.5, 1.5), (1, 6), (0.5, 1.15), (0.1, 0.8), (0.15, 0.25), (0.14, 0.6)],\n",
+    "}\n",
     "\n",
     "DECLARATION_LINE_BASE = \"(declare-const {} Real)\"\n",
     "INPUT_CONSTRAINT_LINE_BASE = \"(assert ({} {} {}))\"\n",
     "OUTPUT_CONSTRAINT_LINE_BASE = \"(assert (<= {} {}))\"\n",
     "\n",
-    "def gen_prop(copy_one_argmax_candidate, copy_two_argmax_candidate):\n",
+    "def gen_prop(copy_one_argmax_candidate, copy_two_argmax_candidate, difficulty=1):\n",
     "    lines = []\n",
     "    lines.append(\"; variable declaration\")\n",
     "    for i in range(2*model_input_size):\n",
@@ -64,8 +74,8 @@
     "    lines.append(\" \")\n",
     "    lines.append(\"; input constraints\")\n",
     "    for i in range(model_input_size):\n",
-    "        lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\">=\", f\"X_{i}\", input_range_dict[int(i/8)][0]))\n",
-    "        lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\"<=\", f\"X_{i}\", input_range_dict[int(i/8)][1]))\n",
+    "        lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\">=\", f\"X_{i}\", input_range_dict[difficulty][int(i/8)][0]))\n",
+    "        lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\"<=\", f\"X_{i}\", input_range_dict[difficulty][int(i/8)][1]))\n",
     "\n",
     "    for i in range(model_input_size):\n",
     "        lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\">=\", f\"X_{model_input_size+i}\", 0.0))\n",
@@ -83,21 +93,29 @@
     "            continue\n",
     "        lines.append(OUTPUT_CONSTRAINT_LINE_BASE.format(f\"Y_{model_output_size+i}\", f\"Y_{model_output_size+copy_two_argmax_candidate}\"))\n",
     "    \n",
-    "    f = open(\"/home/mzi/sys-rl-verif/applications/pensieve/vnnlib/eps{}_{}_{}.vnnlib\".format(\n",
-    "        str(epsilon)[2:], copy_one_argmax_candidate, copy_two_argmax_candidate), \"w\")\n",
+    "    f = open(\"/home/mzi/sys-rl-verif/applications/pensieve/vnnlib/difficulty{}_eps{}_{}_{}.vnnlib\".format(\n",
+    "        difficulty, str(epsilon)[2:], copy_one_argmax_candidate, copy_two_argmax_candidate), \"w\")\n",
     "    f.write('\\n'.join(lines) )\n",
     "    f.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in [4, 5, 6]:\n",
-    "    gen_prop(copy_one_argmax_candidate=0, copy_two_argmax_candidate=i)\n"
+    "for difficulty in [1, 2, 3]:\n",
+    "    for i in [3, 4, 5]: # logit index: {0, 1, ..., 5}\n",
+    "        gen_prop(copy_one_argmax_candidate=0, copy_two_argmax_candidate=i, difficulty=difficulty)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -207,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.17 ('crown')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -223,7 +241,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.8"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "a23f3777b0830da074693c2e4ace01b402de73cf315f82a738a3e7426d816e98"
@@ -231,5 +248,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
