completing penseieve properties

--- a/applications/pensieve/preparation.ipynb
+++ b/applications/pensieve/preparation.ipynb
@@ -5,13 +5,26 @@
    "metadata": {},
    "source": [
     "**input_vars**\n",
-    "6 times: \n",
-    "bit_rate, buffer_size, rebuffering_time, bandwidth_measurement, chunk_til_video_end"
+    "8 times: \n",
+    "\n",
+    "* selected bit_rate (normalized by the max bit_rate), \n",
+    "* buffer_size (in sec, normalized by 10), \n",
+    "* bandwidth_measurement:throughput (kilobyte/ms) \n",
+    "* bandwidth_measurement:time (in 10 sec), \n",
+    "* next_chunk_size (in mega byte), \n",
+    "* chunk_til_video_end (normalized by CHUNK_TIL_VIDEO_END_CAP)\n",
+    "\n",
+    "\n",
+    "VIDEO_BIT_RATE = [300,750,1200,1850,2850,4300]\n",
+    "\n",
+    "CHUNK_TIL_VIDEO_END_CAP = 48.0\n",
+    "\n",
+    "https://github.com/hongzimao/pensieve/blob/master/sim/rl_test.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,50 +32,37 @@
     "# (0.5, 1.5), (1, 6), (0.5, 1.15), (0.1, 0.8), (0.15, 0.25), (0.14, 0.6)\n",
     "\n",
     "input_range_dict = {\n",
-    "    1: [(0.8, 1.1), (2, 4), (0.7, 0.8), (0.5, 0.6), (0.12, 0.16), (0.3, 0.45)],\n",
-    "    2: [(0.6, 1.3), (3, 5), (0.6, 1.05), (0.3, 0.7), (0.13, 0.2), (0.22, 0.5)],\n",
-    "    3: [(0.5, 1.5), (1, 6), (0.5, 1.15), (0.1, 0.8), (0.15, 0.25), (0.14, 0.6)],\n",
-    "}"
+    "    1: [(0.3, 0.6), (0.6, 0.9), (0.5, 0.7), (0.25, 0.35), (0.12, 0.16), (0.4, 0.7)],\n",
+    "    2: [(0.2, 0.8), (0.6, 1.1), (0.3, 0.8), (0.2, 0.4), (0.13, 0.2), (0.3, 0.8)],\n",
+    "    3: [(0.07, 1.0), (0.4, 1.4), (0.1, 1.1), (0.05, 0.5), (0.1, 0.5), (0.2, 1)],\n",
+    "}\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Input range"
+    "# Proporty Definition"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Proporty Definition"
+    "## Robustness"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_input_size = 48\n",
-    "model_output_size = 6\n",
-    "\n",
-    "copy_one_argmax_candidate = 0\n",
-    "copy_two_argmax_candidate = 5\n",
-    "\n",
-    "epsilon = 0.001\n",
-    "input_range_dict = {\n",
-    "    1: [(0.8, 1.1), (2, 4), (0.7, 0.8), (0.5, 0.6), (0.12, 0.16), (0.3, 0.45)],\n",
-    "    2: [(0.6, 1.3), (3, 5), (0.6, 1.05), (0.3, 0.7), (0.13, 0.2), (0.22, 0.5)],\n",
-    "    3: [(0.5, 1.5), (1, 6), (0.5, 1.15), (0.1, 0.8), (0.15, 0.25), (0.14, 0.6)],\n",
-    "}\n",
-    "\n",
     "DECLARATION_LINE_BASE = \"(declare-const {} Real)\"\n",
     "INPUT_CONSTRAINT_LINE_BASE = \"(assert ({} {} {}))\"\n",
     "OUTPUT_CONSTRAINT_LINE_BASE = \"(assert (<= {} {}))\"\n",
     "\n",
-    "def gen_prop(copy_one_argmax_candidate, copy_two_argmax_candidate, difficulty=1):\n",
+    "def gen_prop(copy_one_argmax_candidate, copy_two_argmax_candidate, difficulty):\n",
     "    lines = []\n",
     "    lines.append(\"; variable declaration\")\n",
     "    for i in range(2*model_input_size):\n",
@@ -78,8 +78,12 @@
     "        lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\"<=\", f\"X_{i}\", input_range_dict[difficulty][int(i/8)][1]))\n",
     "\n",
     "    for i in range(model_input_size):\n",
-    "        lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\">=\", f\"X_{model_input_size+i}\", 0.0))\n",
-    "        lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\"<=\", f\"X_{model_input_size+i}\", epsilon))\n",
+    "        if i % 8 == 7:\n",
+    "            lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\">=\", f\"X_{model_input_size+i}\", -epsilon))\n",
+    "            lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\"<=\", f\"X_{model_input_size+i}\", epsilon))\n",
+    "        else:\n",
+    "            lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\">=\", f\"X_{model_input_size+i}\", 0))\n",
+    "            lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\"<=\", f\"X_{model_input_size+i}\", 0))\n",
     "\n",
     "    lines.append(\" \")\n",
     "    lines.append(\"; output constraints\")\n",
@@ -93,29 +97,116 @@
     "            continue\n",
     "        lines.append(OUTPUT_CONSTRAINT_LINE_BASE.format(f\"Y_{model_output_size+i}\", f\"Y_{model_output_size+copy_two_argmax_candidate}\"))\n",
     "    \n",
-    "    f = open(\"/home/mzi/sys-rl-verif/applications/pensieve/vnnlib/difficulty{}_eps{}_{}_{}.vnnlib\".format(\n",
-    "        difficulty, str(epsilon)[2:], copy_one_argmax_candidate, copy_two_argmax_candidate), \"w\")\n",
+    "    path = base_path.format(difficulty, str(epsilon)[2:], copy_one_argmax_candidate, copy_two_argmax_candidate)\n",
+    "\n",
+    "    f = open(path, \"w\")\n",
     "    f.write('\\n'.join(lines) )\n",
-    "    f.close()\n"
+    "    f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for difficulty in [1, 2, 3]:\n",
-    "    for i in [3, 4, 5]: # logit index: {0, 1, ..., 5}\n",
-    "        gen_prop(copy_one_argmax_candidate=0, copy_two_argmax_candidate=i, difficulty=difficulty)"
+    "model_input_size = 48\n",
+    "model_output_size = 6\n",
+    "\n",
+    "epsilon = 0.001\n",
+    "tolerance = 0.40\n",
+    "\n",
+    "base_path = \"/home/mzi/sys-rl-verif/applications/pensieve/vnnlib/robustness/difficulty{}_eps{}_a{}_b{}.vnnlib\"\n",
+    "\n",
+    "for i in range(model_output_size):\n",
+    "    for j in range(model_output_size):\n",
+    "        if (i - j) > tolerance * model_output_size or (j-i) > tolerance * model_output_size:\n",
+    "            for difficulty in [1, 2, 3]:\n",
+    "                gen_prop(copy_one_argmax_candidate=i, copy_two_argmax_candidate=j, difficulty=difficulty)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Monotonicity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "DECLARATION_LINE_BASE = \"(declare-const {} Real)\"\n",
+    "INPUT_CONSTRAINT_LINE_BASE = \"(assert ({} {} {}))\"\n",
+    "OUTPUT_CONSTRAINT_LINE_BASE = \"(assert (<= {} {}))\"\n",
+    "\n",
+    "def gen_prop(copy_one_argmax_candidate, copy_two_argmax_candidate, difficulty, feat_index):\n",
+    "    lines = []\n",
+    "    lines.append(\"; variable declaration\")\n",
+    "    for i in range(2*model_input_size):\n",
+    "        lines.append(DECLARATION_LINE_BASE.format(f\"X_{i}\"))\n",
+    "\n",
+    "    for i in range(2*model_output_size):\n",
+    "        lines.append(DECLARATION_LINE_BASE.format(f\"Y_{i}\"))\n",
+    "\n",
+    "    lines.append(\" \")\n",
+    "    lines.append(\"; input constraints\")\n",
+    "    for i in range(model_input_size):\n",
+    "        lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\">=\", f\"X_{i}\", input_range_dict[difficulty][int(i/8)][0]))\n",
+    "        lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\"<=\", f\"X_{i}\", input_range_dict[difficulty][int(i/8)][1]))\n",
+    "\n",
+    "    for i in range(model_input_size):\n",
+    "        if i % 8 == 0 and int(i) in feat_index:\n",
+    "            lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\">=\", f\"X_{model_input_size+i}\", -epsilon))\n",
+    "            lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\"<=\", f\"X_{model_input_size+i}\", epsilon))\n",
+    "        else:\n",
+    "            lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\">=\", f\"X_{model_input_size+i}\", 0))\n",
+    "            lines.append(INPUT_CONSTRAINT_LINE_BASE.format(\"<=\", f\"X_{model_input_size+i}\", 0))\n",
+    "\n",
+    "    lines.append(\" \")\n",
+    "    lines.append(\"; output constraints\")\n",
+    "    for i in range(model_output_size):\n",
+    "        if i == copy_one_argmax_candidate:\n",
+    "            continue\n",
+    "        lines.append(OUTPUT_CONSTRAINT_LINE_BASE.format(f\"Y_{i}\", f\"Y_{copy_one_argmax_candidate}\"))\n",
+    "\n",
+    "    for i in range(model_output_size):\n",
+    "        if i == copy_two_argmax_candidate:\n",
+    "            continue\n",
+    "        lines.append(OUTPUT_CONSTRAINT_LINE_BASE.format(f\"Y_{model_output_size+i}\", f\"Y_{model_output_size+copy_two_argmax_candidate}\"))\n",
+    "    \n",
+    "    path = base_path.format(difficulty, str(epsilon)[2:], copy_one_argmax_candidate, copy_two_argmax_candidate)\n",
+    "\n",
+    "    f = open(path, \"w\")\n",
+    "    f.write('\\n'.join(lines) )\n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_input_size = 48\n",
+    "model_output_size = 6\n",
+    "\n",
+    "epsilon = 0.001\n",
+    "tolerance = 0.40\n",
+    "throughput_idx = [2]\n",
+    "buffer_idx = [1]\n",
+    "\n",
+    "base_path = \"/home/mzi/sys-rl-verif/applications/pensieve/vnnlib/capacity_utilization/difficulty{}_eps{}_a{}_b{}.vnnlib\"\n",
+    "# base_path = \"/home/mzi/sys-rl-verif/applications/pensieve/vnnlib/rebuffering_avoidance/difficulty{}_eps{}_a{}_b{}.vnnlib\"\n",
+    "for i in range(model_output_size):\n",
+    "    for j in range(model_output_size):\n",
+    "        if (i-j) > tolerance * model_output_size:\n",
+    "            for difficulty in [1, 2, 3]:\n",
+    "                gen_prop(copy_one_argmax_candidate=i, copy_two_argmax_candidate=j, \n",
+    "                    difficulty=difficulty, feat_index=throughput_idx)\n"
+   ]
   },
   {
    "cell_type": "markdown",
