fixing cmars issue

--- a/applications/cmars/cmars_conv2d.ipynb
+++ b/applications/cmars/cmars_conv2d.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "from lib.config_mappol import get_config\n",
-    "import lib.mdp_config as mdp_config\n",
-    "from lib.util import *\n",
-    "from lib.cnn import *\n",
-    "from lib.act import *\n",
-    "from lib.mlp import *\n",
-    "from lib.distributions import *\n",
+    "from cmars_lib.config_mappol import get_config\n",
+    "import cmars_lib.mdp_config as mdp_config\n",
+    "from cmars_lib.util import *\n",
+    "from cmars_lib.cnn import *\n",
+    "from cmars_lib.act import *\n",
+    "from cmars_lib.mlp import *\n",
+    "from cmars_lib.distributions import *\n",
     "from gym import spaces\n",
     "  \n",
     "parser = get_config()\n",
@@ -86,6 +86,8 @@
     "\n",
     "            self.af = nn.ReLU()\n",
     "            self.lin1 = nn.Linear(mdp_config.AUG_LOCAL_STATE_VAR_COUNT + mdp_config.EMBB_LOCAL_OBS_VAR_COUNT, all_args.hidden_size)\n",
+    "            self.lin1.weight.data = model.base.mlp.fc1[0].weight.data\n",
+    "            self.lin1.bias.data = model.base.mlp.fc1[0].bias.data\n",
     "            \n",
     "            self.midlayers = []\n",
     "            for i in range(all_args.layer_N):\n",
@@ -179,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,37 +189,13 @@
      "output_type": "stream",
      "text": [
       "self._use_feature_normalization:  False\n",
-      "obs:  torch.Size([1, 1, 1, 38])\n",
-      "input1:  torch.Size([1, 19])\n",
-      "input2:  torch.Size([1, 19])\n",
       "self._use_feature_normalization:  False\n",
-      "obs:  torch.Size([1, 1, 1, 38])\n",
-      "input1:  torch.Size([1, 19])\n",
-      "input2:  torch.Size([1, 19])\n",
       "self._use_feature_normalization:  False\n",
-      "obs:  torch.Size([1, 1, 1, 38])\n",
-      "input1:  torch.Size([1, 19])\n",
-      "input2:  torch.Size([1, 19])\n",
       "self._use_feature_normalization:  False\n",
-      "obs:  torch.Size([1, 1, 1, 38])\n",
-      "input1:  torch.Size([1, 19])\n",
-      "input2:  torch.Size([1, 19])\n",
       "self._use_feature_normalization:  False\n",
-      "obs:  torch.Size([1, 1, 1, 38])\n",
-      "input1:  torch.Size([1, 19])\n",
-      "input2:  torch.Size([1, 19])\n",
       "self._use_feature_normalization:  False\n",
-      "obs:  torch.Size([1, 1, 1, 38])\n",
-      "input1:  torch.Size([1, 19])\n",
-      "input2:  torch.Size([1, 19])\n",
       "self._use_feature_normalization:  False\n",
-      "obs:  torch.Size([1, 1, 1, 38])\n",
-      "input1:  torch.Size([1, 19])\n",
-      "input2:  torch.Size([1, 19])\n",
-      "self._use_feature_normalization:  False\n",
-      "obs:  torch.Size([1, 1, 1, 38])\n",
-      "input1:  torch.Size([1, 19])\n",
-      "input2:  torch.Size([1, 19])\n"
+      "self._use_feature_normalization:  False\n"
      ]
     }
    ],
