updating aurora properties

--- a/applications/aurora/preparation.ipynb
+++ b/applications/aurora/preparation.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,11 @@
     "    for i in range(2*model_input_size):\n",
     "        lines.append(DECLARATION_LINE_BASE.format(f\"X_{i}\"))\n",
     "\n",
-    "    lines.append(DECLARATION_LINE_BASE.format(\"Y_0\"))\n",
+    "    if if_differential:\n",
+    "        lines.append(DECLARATION_LINE_BASE.format(\"Y_0\"))\n",
+    "    else:\n",
+    "        lines.append(DECLARATION_LINE_BASE.format(\"Y_0\"))\n",
+    "        lines.append(DECLARATION_LINE_BASE.format(\"Y_1\"))\n",
     "\n",
     "    lines.append(\" \")\n",
     "    lines.append(\"; input constraints\")\n",
@@ -179,11 +183,21 @@
     "        if int(i % history_length) in feat_index:\n",
     "            if if_multistep or (int(i/history_length) == history_length-1):\n",
     "                lines[-1] = INPUT_CONSTRAINT_LINE_BASE.format(\"<=\", f\"X_{model_input_size+i}\", epsilon)\n",
-    "            \n",
+    "\n",
     "    lines.append(\" \")\n",
     "    lines.append(\"; output constraints\")\n",
-    "    # lines.append(OUTPUT_CONSTRAINT_LINE_BASE.format(f\"Y_{0}\", -tolerance))\n",
-    "    lines.append(OUTPUT_CONSTRAINT_LINE_BASE.format(tolerance, f\"Y_{0}\"))\n",
+    "    if if_differential:\n",
+    "        if if_a_less_b:\n",
+    "            lines.append(\"(assert (<= Y_0 {}))\".format(-tolerance))\n",
+    "        else:\n",
+    "            lines.append(\"(assert (>= Y_0 {}))\".format(tolerance))\n",
+    "    else:\n",
+    "        if if_a_less_b:\n",
+    "            lines.append(\"(assert (<= Y_0 {}))\".format(-tolerance/2))\n",
+    "            lines.append(\"(assert (>= Y_1 {}))\".format(tolerance/2))\n",
+    "        else:\n",
+    "            lines.append(\"(assert (>= Y_0 {}))\".format(tolerance/2))\n",
+    "            lines.append(\"(assert (<= Y_1 {}))\".format(-tolerance/2))\n",
     "\n",
     "    path = base_path.format(difficulty, str(epsilon)[2:])\n",
     "\n",
@@ -195,20 +209,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_input_size = 9\n",
     "history_length = 3\n",
-    "epsilon = 0.001\n",
+    "epsilon = 0.01\n",
     "tolerance = 0.5\n",
-    "recv_ratio_idx = [2]\n",
-    "if_multistep = False\n",
     "\n",
-    "base_path = \"vnnlib/loss_avoidance/difficulty{}_eps{}_neg_diff_singlestep.vnnlib\"\n",
+    "# recv_ratio_idx = [2]\n",
+    "# if_a_less_b = False\n",
+    "# base_path = \"vnnlib/loss_avoidance/difficulty{}_eps{}_singlestep.vnnlib\"\n",
+    "\n",
+    "latency_ratio_idx = [1]\n",
+    "if_a_less_b = True\n",
+    "base_path = \"vnnlib/capacity_utilization/difficulty{}_eps{}_singlestep.vnnlib\"\n",
+    "\n",
+    "if_multistep = False\n",
+    "if_differential = False\n",
+    "\n",
     "for difficulty in [1, 2, 3]:\n",
-    "    gen_prop(difficulty=difficulty, feat_index=recv_ratio_idx)\n"
+    "    for epsilon in [0.01, 0.001]:\n",
+    "        gen_prop(difficulty=difficulty, feat_index=latency_ratio_idx)\n"
    ]
   }
  ],
